# ai-document-backend

./: .env.development  .env.example  .env.production  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Justfile  README.md  compose.dev.yml  compose.prod.yml  docker-compose.yml  package-lock.json  package.json
config/settings/: default.toml  development.toml  production.toml
configs/: otel-collector-config.yaml
doc/: workflow.md
infra/development/: Dockerfile.development  docker-compose.dev.yml
infra/production/: Dockerfile.production  docker-compose.prod.yml
migrations/: 20251101164713_create_users_table.up.sql
src/: app.module.ts  configuration.ts  main.rs  main.ts
src/ai/: ai.constants.ts  ai.module.ts  ai.prompts.ts  ai.service.spec.ts  ai.service.ts  anthropic.service.ts  gemini.service.ts
src/auth/: auth.constants.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
src/chats/: chats.controller.spec.ts  chats.controller.ts  chats.enum.ts  chats.module.ts  chats.service.spec.ts  chats.service.ts
src/config/: env.config.ts  mod.rs  settings.rs
src/core/: configuration.ts  core.module.ts
src/documents/: documents.constants.ts  documents.controller.spec.ts  documents.controller.ts  documents.module.ts  documents.service.spec.ts  documents.service.ts
src/domain/: user.rs
src/embedding/: embedding.constant.ts  embedding.enum.ts  embedding.module.ts  embedding.service.spec.ts  embedding.service.ts
src/interfaces/: mod.rs  repositories.rs
src/messages/: messages.controller.spec.ts  (+5 more)
(+57 files in other folders)
